made huge changes, binop is no longer a parent. need dispatch recursive call now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     "valarray": "cpp",
     "variant": "cpp",
     "*.ipp": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "system_error": "cpp"
   }
 }
