made nested-type function calls (like list.push_back() specific to their nested data type

--- a/krutc/CMakeLists.txt
+++ b/krutc/CMakeLists.txt
@@ -36,6 +36,9 @@ cmake_minimum_required(VERSION 3.29.3)
 
 project(krutc)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
@@ -44,10 +47,18 @@ include_directories(${LLVM_INCLUDE_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 
-set(SOURCES frontend/main.cpp frontend/token.cpp frontend/lexer.cpp frontend/parser.cpp 
+set(SOURCES frontend/main.cpp frontend/lexer.cpp frontend/parser.cpp 
             frontend/tree.cpp frontend/typechecker.cpp frontend/scopetable.cpp)
 
 add_executable(krutc ${SOURCES})
 
-llvm_map_components_to_libnames(llvm_libs support core irreader)
+llvm_map_components_to_libnames(llvm_libs
+  support
+  core
+  irreader
+  executionengine
+  mcjit
+  native
+  orcjit
+)
 target_link_libraries(krutc ${llvm_libs})
