--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,6 @@
     "__threading_support": "cpp"
   },
   "git.ignoreLimitWarning": true,
-  "editor.defaultFormatter": "xaver.clang-format",
+  "editor.defaultFormatter": ".clang-format",
   "C_Cpp.clang_format_style": "file"
 }
