--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,7 @@
     "__threading_support": "cpp"
   },
   "git.ignoreLimitWarning": true,
-  "editor.defaultFormatter": ".clang-format",
-  "C_Cpp.clang_format_style": "file"
+  "editor.defaultFormatter": "xaver.clang-format",
+  "editor.formatOnSave": true,
+  "clang-format.style": "file"
 }
